--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,8 @@ p {
 }
 
 .nav-link {
+  display: flex;
+  align-items: center;
   color: white;
 }
 
@@ -55,9 +57,6 @@ p {
 }
 
 .robert-mcgrew {
-  position: absolute;
-  left: 10px;
-  top: -1px;
   color: white;
 }
 
