--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,8 +33,6 @@ p {
 }
 
 .nav-link {
-  display: flex;
-  align-items: center;
   color: white;
 }
 
@@ -56,7 +54,16 @@ p {
   width: 0px;
 }
 
+.homepage-heading-hidden {
+  visibility: hidden;
+  height: 0px;
+  width: 0px;
+}
+
 .robert-mcgrew {
+  position: absolute;
+  left: 10px;
+  top: -1px;
   color: white;
 }
 
@@ -139,6 +146,9 @@ p {
   outline: none; 
 }
 
+.copy-right-footer {
+  background-color: rgb(222, 222, 222);
+}
 
 /* Feedback Page */
 .feedback-text {
